Bug 1181890 - Center children of ruby content frame if necessary after the bidi reposition. r=jfkthame, a=sledru